# distributed-dwaf-capstone-project

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
config/: consensus-config.toml  ml-detector-config.yaml  orchestrator-config.yml  validator-config.yaml  zkp-params.json
config/deployment-profiles/: demo.yaml  local.yaml
docs/: Architecture.md
feedback-service/: app.py  dockerfile  model_retrainer.py  requirements.txt  waf_updater.py
ml-detector/: api_server.py  detector.py  dockerfile  feature_extractor.py  requirements.txt
ml-detector/training/: dataset.py  evaluator.py  train.py
orchestrator/: config.go  dockerfile  feedback_loop.go  go.mod  main.go  ml_client.go  orchestrator.go  taxii_publisher.go  traffic_aggregator.go  types.go  validator_client.go  zkp_coordinator.go
scripts/: run-demo.sh  start-pipeline.sh  train-models.sh
taxii-server/: app.py  dockerfile  requirements.txt  stix_convertor.py
tests/payloads/: legitimate-traffic.txt  sql-injection-samples.txt
tests/unit/: test_feature_extraction.py  test_ml_detector.py
validator-network/: config.go  consensus.go  dockerfile  go.mod  main.go  types.go  voting.go  zkp_verifier.go
validator-network/config/: validator-0.yaml  validator-1.yaml  validator-2.yaml
zkp-layer/: .gitignore  Cargo.toml  dockerfile  generate_payload.json
zkp-layer/benches/: commitment_hash.rs  proof_generation.rs  proof_verification.rs
zkp-layer/src/: errors.rs  lib.rs  main.rs  prover.rs  utils.rs  verifier.rs
zkp-layer/src/circuits/: ml_inference_circuit.rs  mod.rs
zkp-layer/src/config/: ml-detector-config.yaml  zkp-params.json
zkp-layer/src/config/deployment-profiles/: demo.yaml
zkp-layer/tests/: circuit_tests  integration_tests
