[package]
name = "zkp-waf"
version = "0.1.0"
edition = "2026"
authors = ["capstone"]
description = "Zero-Knowledge Proof layer for privacy-preserving ML inference verification"
license = "MIT"
repository = "https://github.com/Tanvi-Badghare/distributed-dwaf-capstone-project/tree/main/zkp-layer"

[[bin]]
name = "zkp-waf"
path = "src/main.rs"

# ----------------------------
# Dependencies
# ----------------------------

[dependencies]

# ---- Arkworks zk-SNARK stack (Groth16 over BN254) ----
ark-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-relations = { version = "0.4", default-features = false }
ark-r1cs-std = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
ark-bn254 = { version = "0.4", default-features = false }

# Optional but recommended for hash commitments
ark-crypto-primitives = { version = "0.4", default-features = false }

# ---- Web server (Actix uses Tokio internally) ----
actix-web = "4.4"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }

# ---- Serialization ----
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ---- Hashing for model commitments (outside circuit) ----
sha2 = "0.10"

# ---- Proof encoding ----
base64 = "0.21"

# ---- Logging / Observability ----
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ---- Error handling ----
thiserror = "1.0"
anyhow = "1.0"

# ----------------------------
# Features
# ----------------------------

[features]
default = ["std"]
std = [
    "ark-std/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-relations/std",
    "ark-r1cs-std/std",
    "ark-groth16/std",
    "ark-bn254/std",
    "ark-crypto-primitives/std"
]

# ----------------------------
# Build Profiles
# ----------------------------

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0

