[package]
name = "zkp-waf"
version = "0.1.0"
edition = "2021"
authors = ["Tanvi Badghare"]
description = "Zero-Knowledge Proof layer for privacy-preserving ML inference verification"

[[bin]]
name = "zkp-waf"
path = "src/main.rs"

[[bench]]
name = "proof_generation"
harness = false

[[bench]]
name = "proof_verification"
harness = false

[[bench]]
name = "commitment_hash"
harness = false

[dependencies]
# ----------------------------
# Arkworks zk-SNARK stack
# ----------------------------
ark-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-relations = { version = "0.4", default-features = false }
ark-r1cs-std = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"] }
ark-snark = { version = "0.4", default-features = false }
ark-crypto-primitives = { version = "0.4", default-features = false }

# ----------------------------
# Web server
# ----------------------------
actix-web = "4.4"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }

# ----------------------------
# Serialization
# ----------------------------
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ----------------------------
# Model commitment hashing
# ----------------------------
sha2 = "0.10"

# ----------------------------
# Proof transport encoding
# ----------------------------
base64 = "0.21"

# ----------------------------
# Logging (structured)
# ----------------------------
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ----------------------------
# Error handling
# ----------------------------
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[features]
default = ["std"]
std = [
    "ark-std/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-relations/std",
    "ark-r1cs-std/std",
    "ark-groth16/std",
    "ark-bn254/std",
    "ark-crypto-primitives/std"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0